syntax = "proto3";

option java_package = "org.example.grpc";
option java_outer_classname = "HelloWorldProto";

service HelloWorld {
  // Unary RPC
  rpc SayHello (HelloRequest) returns (HelloResponse);

  // Server Streaming RPC
  rpc StreamGreetings (HelloRequest) returns (stream HelloResponse);

  // Client Streaming RPC
  rpc SendGreetings (stream HelloRequest) returns (HelloResponse);

  // Bidirectional Streaming RPC
  rpc Chat (stream HelloRequest) returns (stream HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
